(fix) Fix z-index of audio controls.

--- a/public/styles/styles/_about.scss
+++ b/public/styles/styles/_about.scss
@@ -242,5 +242,6 @@ span.stat-number {
 .song {
   position: fixed;
   right: 0px;
+  z-index: 100;
 }
 
